--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "bmp-js": "0.0.3",
     "ffi": "2",
-    "jimp": "^0.2.27",
+    "jimp": "0.2.27",
     "ref": "~1.1.3",
     "ref-struct": "~1.0.2"
   }
