--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.4",
   "description": "Extracts icon resource from any windows binary or file to base64 PNG string.",
   "main": "index.js",
-  "scripts": {},
-  "os" : [ "win32" ],
+  "scripts": {
+    "test": "mocha"
+  },
+  "os": [
+    "win32"
+  ],
   "repository": {
-      "type" : "git",
-      "url" : "https://github.com/SkaceKamen/win-icon-extractor.git"
+    "type": "git",
+    "url": "https://github.com/SkaceKamen/win-icon-extractor.git"
   },
   "keywords": [
     "windows",
@@ -24,5 +28,8 @@
     "jimp": "0.2.27",
     "ref": "~1.1.3",
     "ref-struct": "~1.0.2"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0"
   }
 }
