--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   },
   "dependencies": {
     "bmp-js": "0.1.0",
-    "ffi": "2",
+    "ffi-napi": "^2.4.5",
     "jimp": "0.6.4",
-    "ref": "~1.3.5",
-    "ref-struct": "~1.1.0"
+    "ref": "git+https://github.com/lxe/ref.git#node-12",
+    "ref-struct": "git+https://github.com/lxe/ref-struct.git#node-12"
   },
   "devDependencies": {
     "mocha": "^6.1.4"
